grid style added to css cards and fixed text overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,28 +34,37 @@ img {
 
 
 /* description */
-p {
-    font-size: smaller;
+
+
+.infoBox{
+    padding: 20px;
 }
-
-
 /* card style  */
 
 .card{
     width: 20rem;
-    border-radius: 10%;
-    box-shadow: 1px;
+    height: 35rem;
 }
 .card-body{
-background-color: var(--omega);
+background-color: var(--delta);
 }
 
 .card-title{
-    font-size: small;
-      font-weight: bold;
+    font-size: medium;
+    font-weight: bold;
+    padding-top: 9px;
+    align-items: center;
+    
+
   }
 
 .card-text{
     color: var(--alpha);
-
+    padding: 2px;
+    width:  100%;
+    height: 10rem;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    
 }
+
